# marco_score_trial

./: .env.example  .gitignore  DATA_ETHICS.md  DESIGN.md  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: config.py  entities.py  llm.py  main.py  multimodal.py  search.py
backend/tests/: test_entities.py  test_health.py  test_llm.py  test_multimodal.py  test_search.py
data_pipeline/: __init__.py  download_thumbnails.py  embed_clip.py  enrich_ner.py  harvest.py  index_opensearch.py
data_pipeline/tests/: test_harvest.py
docs/: clip-search.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/compare/: page.tsx
frontend/app/entities/: page.tsx
frontend/app/visual/: page.tsx
frontend/components/: CompareApp.tsx  EntitiesApp.tsx  EntityGraph.tsx  Facets.tsx  LlmPanel.tsx  ResultCard.tsx  SearchApp.tsx  SearchBar.tsx  Timeline.tsx  VisualApp.tsx
frontend/lib/: api.ts  entities.ts  highlight.ts  llm.ts  multimodal.ts  types.ts
